--- a/.github/workflows/surgeDeployment.yml
+++ b/.github/workflows/surgeDeployment.yml
@@ -32,6 +32,7 @@ jobs:
     
     - uses: borales/actions-yarn@v2.0.0
       with:
+        env: YARN_IGNORE_NODE=1
         cmd: install # will run `yarn install` command
         
     - name: Build React App
