--- a/.github/workflows/surgeDeployment.yml
+++ b/.github/workflows/surgeDeployment.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Install NodeJS
-      uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2.2.0
       with:
         node-version: 12
     
