--- a/.github/workflows/surgeDeployment.yml
+++ b/.github/workflows/surgeDeployment.yml
@@ -36,8 +36,9 @@ jobs:
                 
     - name: Build React App
       run: sudo yarn build
-      env: ${{ YARN_IGNORE_NODE=1 }}
-      
+      env:
+          YARN_IGNORE_NODE: 1
+               
     - name: Install Surge
       run: npm install --global surge
 
