--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "clsx": "^1.1.1",
     "eslint-config-react-app": "^6.0.0",
     "prop-types": "^15.7.2",
